# HelloQt

./: CMakeLists.txt  README.md
build-env-files/template/: set-qt-env.bat
src/: main.cpp
